--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bull": "^3.7.0",
     "dotenv": "^15.0.0",
     "foreman": "^3.0.1",
+    "mongoose": "^4.4.2",
     "throng": "^5.0.0",
     "winston": "^3.8.0"
   },
