--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bull": "^3.7.0",
+    "chai-spies": "^1.0.0",
     "dotenv": "^15.0.0",
     "foreman": "^3.0.1",
     "joi": "^17.6.0",
