--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "nf start",
-    "test": "NODE_ENV=test DEBUG=test nyc --reporter='text' mocha --recursive \"./test/**/*.js\""
+    "test": "NODE_ENV=test DEBUG=test nyc --reporter='text' mocha --recursive \"./test/**/*.test.js\""
   },
   "author": "Christoph Fey",
   "license": "ISC",
   "dependencies": {
     "bull": "^3.7.0",
-    "chai-spies": "^1.0.0",
     "dotenv": "^15.0.0",
     "foreman": "^3.0.1",
     "joi": "^17.6.0",
@@ -20,6 +19,7 @@
     "winston": "^3.8.0"
   },
   "devDependencies": {
+    "chai-spies": "^1.0.0",
     "chai": "^4.3.6",
     "ioredis": "^4.28.3",
     "mocha": "^9.2.0",
